--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -46,7 +46,7 @@
     position: absolute;
     right: 0;
     text-align: center;
-    top: 0;
+    top: 7px;
     width: 65px;
   }
   .bottom {
@@ -230,7 +230,7 @@
   }
 }
 
-.course, .course-detail {
+.SessionList {
   .add { display: inline-block; }
   .drop, .in-cart .add { display: none; margin: 0 auto; }
   .in-cart .drop { display: inline-block; }
