--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -57,7 +57,8 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span>
+            <button type="button" class="close" data-dismiss="modal" onclick="toggleCourses();">
+              <span aria-hidden="true">&times;</span>
               <span class="sr-only">Close</span></button>
             <h4 class="modal-title">Shopping Cart</h4>
           </div>
@@ -65,7 +66,8 @@
             {% include "course/_cart.html" %}
           </div>
           <div class="modal-footer">
-            <button type="button" class="pull-left btn btn-danger" data-dismiss="modal">Keep Shopping</button>
+            <button type="button" class="pull-left btn btn-default" data-dismiss="modal" onclick="toggleCourses();">
+              &laquo; Keep Shopping</button>
             <a href="javascript:;" onclick="startCheckout(); return false">
               <img src="{{ STATIC_URL }}img/paypal.png"></a>
           </div>
