--- a/course/templates/course/_course_row.html
+++ b/course/templates/course/_course_row.html
@@ -20,14 +20,16 @@
         <div class="price">$ {{ course.user_fee }}</div>
       </a>
       {% for session in course.active_sessions %}
-      {% if forloop.counter == 4 and course.active_sessions|length > 4 %}
+      {% if forloop.counter == 3 and course.active_sessions|length > 3 %}
       <input type="checkbox" id="show_sessions_{{ course.pk }}" class="session_toggle" />
-      <label for="show_sessions_{{ course.pk }}"> {{ course.active_sessions|length|add:-4 }} more sessions</label>
+      <label for="show_sessions_{{ course.pk }}">
+        {{ course.active_sessions|length|add:-2 }} more sessions</label>
       {% endif %}
       <div class="session">
         <small>
           {% if session.full or session.closed %}
-          <b style="color: red;">[{% if session.full %}FULL{% else %}{{ session.closed_string }}{% endif %}]</b>
+          <b style="color: red;">
+            [{% if session.full %}FULL{% else %}{{ session.closed_string }}{% endif %}]</b>
           {% endif %}
           {{ session.get_short_dates }}
           with <a href="{% url "member_detail" session.user.username %}">
