--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -112,6 +112,7 @@
     <script src="{{ STATIC_URL }}less/bootstrap/js/popover.js"></script>
     <script src="{{ STATIC_URL }}less/bootstrap/js/tab.js"></script>
     {% endcompress %}    
+    {% block extrajs %}{% endblock %}
     <script src="{{ STATIC_URL }}blog.js"></script>
     <script>
 
