--- a/course/templates/course/_course_row.html
+++ b/course/templates/course/_course_row.html
@@ -7,7 +7,7 @@
     </a>
     <div class="details">
       <a href="{{ couse.url }}" class="title">
-        {{ course }}
+        {{ course.title }}
         <div class="price">$ {{ course.user_fee }}</div>
       </a>
       <div class="sessions" data-ng-repeat="session in course.active_sessions">
