--- a/txrx/static/less/txrx.less
+++ b/txrx/static/less/txrx.less
@@ -136,6 +136,7 @@ form.filters { margin-bottom: 10px; }
 }
 
 .list_filter {
+  display: block;
   [type=radio] { display: none; }
   label {
     cursor: pointer;
