--- a/course/templates/course/_filters.html
+++ b/course/templates/course/_filters.html
@@ -1,24 +1,18 @@
-{% for f in filters %}
-<div id="filter_{{ f.slug }}" onchange="$(this).closest('form').submit();" class="list_filter btn-group-vertical">
-  <input type="radio" value="" for="all_{{ f.slug }}" checked="checked" name="{{ f.slug }}"/>
-  <label for="all_{{ f.slug }}" class="btn btn-default">
-    All {{ f.name }}s
+{% verbatim %}
+<input type="radio" value="" for="all_subjects" checked="checked" name="subject"/>
+<label for="all_subjects" class="btn btn-default">
+  All Subjects
+</label>
+<div ng-repeat="subject in subjects" class="list_filter btn-group-vertical">
+  <input type="radio" value="{{ subject.value }}" id="filter_subject_{{ subject.value }}" name="subject" />
+  <label class="btn btn-default" for="filter_subject_{{ subject.value }}">
+    {{ subject.name }} ({{ subject.active_courses }} {{ subject.inactive_courses }})
   </label>
-  {% for o in f.options %}
-  <input type="radio" value="{{ o.value }}" id="filter_{{ f.slug }}_{{ o.value }}" name="{{ f.slug }}"/>
-  <label class="btn btn-default" for="filter_{{ f.slug }}_{{ o.value }}"{% if not o.count %}
-         disabled="disabled"{% endif %}>
-    {{ o.name }} {% if o.count or o.count == 0 %}({{ o.count }}){% endif %}
-  </label>
-  {% for s in o.subfilters %}{# These will not appear if empty #}
-  <input type="radio" value="{{ s.value }}" id="filter_{{ f.slug }}_{{ s.value }}" name="{{ f.slug }}"/>
-  <label for="filter_{{ f.slug }}_{{ s.value }}" class="btn btn-default">
-    -- {{ s.name }} ({{ s.count }})
-  </label>
-  {% endfor %}
-  {% endfor %}
+  <div ng-repeat="child in subject.children">
+    <input type="radio" value="{{ child.value }}" id="filter_subject_{{ child.value }}" name="subject"/>
+    <label for="filter_subject_{{ child.value }}" class="btn btn-default">
+      -- {{ child.name }} ({{ child.active_courses }} {{ child.inactive_courses }})
+    </label>
+  </div>
 </div>
-<script>
-  $("#filter_{{ f.slug }} [name={{ f.slug }}]").change(function() { $(this).closest("form").submit(); });
-</script>
-{% endfor %}
+{% endverbatim %}
