--- a/txrx/static/less/course.less
+++ b/txrx/static/less/course.less
@@ -33,6 +33,8 @@
     text-align: center;
     top: 10px;
     width: 70px;
+    &:before { content: "$"; }
+    &:empty { display: none; }
   }
   .title {
     display: block;
