hiding child filters unless category is selected

--- a/course/templates/course/_filters.html
+++ b/course/templates/course/_filters.html
@@ -1,14 +1,16 @@
 {% verbatim %}
-<input type="radio" value="" for="all_subjects" checked="checked" name="subject"/>
-<label for="all_subjects" class="btn btn-default">
-  All Subjects
-</label>
+<div class="list_filter btn-group-vertical">
+  <input type="radio" value="" for="all_subjects" checked="checked" name="subject"/>
+  <label for="all_subjects" class="btn btn-default">
+    All Subjects
+  </label>
+</div>
 <div ng-repeat="subject in subjects" class="list_filter btn-group-vertical">
   <input type="radio" value="{{ subject.value }}" id="filter_subject_{{ subject.value }}" name="subject" />
   <label class="btn btn-default" for="filter_subject_{{ subject.value }}">
     {{ subject.name }} ({{ subject.active_courses }} {{ subject.inactive_courses }})
   </label>
-  <div ng-repeat="child in subject.children">
+  <div ng-repeat="child in subject.children" class="child">
     <input type="radio" value="{{ child.value }}" id="filter_subject_{{ child.value }}" name="subject"/>
     <label for="filter_subject_{{ child.value }}" class="btn btn-default">
       -- {{ child.name }} ({{ child.active_courses }} {{ child.inactive_courses }})
