--- a/txrx/templates/email/course_reminder.html
+++ b/txrx/templates/email/course_reminder.html
@@ -1,6 +1,6 @@
 {% load i18n %}{% autoescape off %}
 
-This is a reminder that you have a class today at TXRX Labs. The class starts today ({{ class_time.start|date:"F d" }}) at {{ class_time.start|date:"h:i a" }}.
+This is a reminder that you have a class ({{ class_time.session.section.course }}) tomorrow at TXRX Labs. The class starts tomorrow ({{ class_time.start|date:"F d" }}) at {{ class_time.start|date:"h:i a" }}.
 
 {% if session.section.requirements %}Please remember the following requirements: {{ session.section.requirements }}
 
