--- a/tool/templates/tool/lab_index.html
+++ b/tool/templates/tool/lab_index.html
@@ -6,13 +6,13 @@
 
 {% block main %}
 <div id="labs" class="row">
-  {% for room in rooms %}
-  {% thumbnail room.first_photo|get_override:"landscape_crop" "600x450" crop="center" as im %}
+  {% for lab in labs %}
+  {% thumbnail lab.first_photo|get_override:"landscape_crop" "600x450" crop="center" as im %}
   <div class="lab col-md-4 col-sm-6 col-xs-12">
-    <a href="{% url "room_detail" room.slug room.id %}">
+    <a href="{% url "lab_detail" lab.slug lab.id %}">
       <img class="bg" src="{{ im.url }}" alt="" />
       <div class="bottom">
-        <div class="title">{{ room.name }}</div>
+        <div class="title">{{ lab.name }}</div>
       </div>
     </a>
   </div>
