--- a/course/templates/course/instructor_evaluations.html
+++ b/course/templates/course/instructor_evaluations.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Course Evaluations{% endblock %}
+
 {% block main %}
 <ul>
   {% for session,evaluations in session_evaluations %}
