--- a/thing/templates/thing/detail.html
+++ b/thing/templates/thing/detail.html
@@ -51,7 +51,7 @@
       </p>
       {% endif %}
       {% if thing.session %}
-      <b>Course:</b> <a href="{{ thing.session.get_absolute_url }}">{{ thing.session.section.course }}</a>
+      <b>Course:</b> <a href="{{ thing.session.get_absolute_url }}">{{ thing.session.course }}</a>
       {% endif %}
       <h3>Like what you see? Please Share</h3>
       <p style="text-align: center; margin: 10px 0">
