--- a/course/templates/course/paypal_return.html
+++ b/course/templates/course/paypal_return.html
@@ -32,13 +32,13 @@
   {% for session in sessions %}
   <tr>
     <td>
-      <a href="{{ section.get_absolute_url }}">{{ session.name }}</a>
-      {% if session.section.requirements %}
-      <p><b>Requirements</b>: {{ session.section.requirements }}</p>
+      <a href="{{ session.course.get_absolute_url }}">{{ session.name }}</a>
+      {% if session.course.requirements %}
+      <p><b>Requirements</b>: {{ session.course.requirements }}</p>
       {% endif %}
     </td>
     <td>{{ session.get_short_dates }}</td>
-    <td>${{ session.section.fee }}</td>
+    <td>${{ session.course.fee }}</td>
   </tr>
   {% endfor %}
 </table>
