upping the admin dashboard and adding a list view feature in course admin

--- a/txrx/templates/admin/index.html
+++ b/txrx/templates/admin/index.html
@@ -74,6 +74,7 @@
                   <b>Never Taught</b>
                   {% endif %}
                 </div>
+                <div><big>{{ course.notifycourse_set.count }}</big> People on waiting list</div>
               </dd>
               <dd>
                 <br />
